--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="user_rate">User Rating:</string>
     <string name="release_date">Release Date:</string>
     <string name="no_internet">No Internet Connection, please try again later.</string>
+    <string name="trailers">Trailers:</string>
 </resources>
