--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="release_date">Release Date:</string>
     <string name="no_internet">No Internet Connection, please try again later.</string>
     <string name="trailers">Trailers:</string>
+    <string name="reviews">Reviews:</string>
 </resources>
