--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,12 @@
 <resources>
     <string name="app_name">PopularMovies</string>
     <string name="top_rated">Top Rated</string>
+    <string name="favorites">Favorites</string>
     <string name="most_popular">Most Popular</string>
     <string name="user_rate">User Rating:</string>
     <string name="release_date">Release Date:</string>
     <string name="no_internet">No Internet Connection, please try again later.</string>
     <string name="trailers">Trailers:</string>
     <string name="reviews">Reviews:</string>
+    <string name="add_favorite">Add to favorites</string>
 </resources>
